downloaded jar to temp to help lag